Fix: 위치 없는 회차만 가진 사용자의 일정/수강관리 hub 500 (Map.of().get(null))
`resolveNames`/`venueNames` 는 해석할 venueRefId 가 하나도 없으면 `Map.of()` 를 돌려주는데,
호출부는 venueRefId 가 null 인 회차(위치 없는 점유)에도 그대로 `get()` 을 한다.
불변 맵(`Map.of()`)은 **null 키 조회를 NPE 로 거부**하므로 그 사용자에게 500 이 나갔다.
`Collections.emptyMap()` 은 null 키에 null 을 준다(실측 확인).

영향받던 엔드포인트 4개:
- GET /enrollments/mine
- GET /enrollments/mine/schedule
- GET /instructor/enrollments
- GET /instructor/enrollments/hub

위치 있는 회차가 **하나라도** 섞이면 안 터져서 기존 시나리오가 전부 이 경로를 비껴갔다.
회귀 테스트 2건(SH-V1 학생 / IH-V1 강사)은 수정을 되돌리면 실제로 실패하는 것까지 확인했다 —
수정이 producer 3곳(EnrollmentService 1 + InstructorEnrollmentService 2)이라 학생·강사
양쪽을 각각 잠근다.

세션 단체 채팅 작업 중 테스트 픽스처가 우연히 그 상태를 만들어 발견했고, 채팅과 무관해
별도 PR 로 분리했다.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>